// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/entities/users/ui/template-user-list-item/ui > should render actions into right slot > with actions slot 1`] = `
<li
  class="MuiListItem-root MuiListItem-gutters MuiListItem-padding _card_9cc384 css-1gh3v4f-MuiListItem-root"
>
  <div
    class="MuiListItemAvatar-root css-1e9lk82-MuiListItemAvatar-root"
  >
    <div
      aria-label="username"
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1d5obdn-MuiAvatar-root"
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="AccountCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
        />
      </svg>
    </div>
  </div>
  <div
    class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
  >
    <p
      class="MuiTypography-root MuiTypography-subtitle1 MuiListItemText-primary css-1kji7gj-MuiTypography-root"
    >
      username
    </p>
    <p
      class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-ymve6q-MuiTypography-root"
    >
      email@example.org
    </p>
  </div>
  <div
    class="MuiListItemSecondaryAction-root css-518kzi-MuiListItemSecondaryAction-root"
  >
    <div>
      actions
    </div>
  </div>
</li>
`;

exports[`src/entities/users/ui/template-user-list-item/ui > should render extra into right slot > with extra slot 1`] = `
<li
  class="MuiListItem-root MuiListItem-gutters MuiListItem-padding _card_9cc384 css-q9mp92-MuiListItem-root"
>
  <div
    class="MuiListItemAvatar-root css-1e9lk82-MuiListItemAvatar-root"
  >
    <div
      aria-label="username"
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1d5obdn-MuiAvatar-root"
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="AccountCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
        />
      </svg>
    </div>
  </div>
  <div
    class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
  >
    <p
      class="MuiTypography-root MuiTypography-subtitle1 MuiListItemText-primary css-1kji7gj-MuiTypography-root"
    >
      username
    </p>
    <p
      class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-ymve6q-MuiTypography-root"
    >
      email@example.org
    </p>
  </div>
  <div>
    extra
  </div>
</li>
`;

exports[`src/entities/users/ui/template-user-list-item/ui > should render list item for user 1`] = `
<li
  class="MuiListItem-root MuiListItem-gutters MuiListItem-padding _card_9cc384 css-q9mp92-MuiListItem-root"
>
  <div
    class="MuiListItemAvatar-root css-1e9lk82-MuiListItemAvatar-root"
  >
    <div
      aria-label="username"
      class="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault css-1d5obdn-MuiAvatar-root"
      data-mui-internal-clone-element="true"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="AccountCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6zm0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20z"
        />
      </svg>
    </div>
  </div>
  <div
    class="MuiListItemText-root MuiListItemText-multiline css-konndc-MuiListItemText-root"
  >
    <p
      class="MuiTypography-root MuiTypography-subtitle1 MuiListItemText-primary css-1kji7gj-MuiTypography-root"
    >
      username
    </p>
    <p
      class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-ymve6q-MuiTypography-root"
    >
      email@example.org
    </p>
  </div>
</li>
`;
